# liiga_api

./: .gitignore  README.md  pyproject.toml
docs/: all_players.md  player_game_logs.md  players_advanced.md  players_basic_stats.md  players_goals.md  players_passes.md  players_penalties.md  players_shots.md
liiga_api/: __init__.py  base.py  endpoints.py  exceptions.py  models.py  utils.py
liiga_api/endpoints/: games.py  players.py  teams.py
